--- a/charts/oai-5g-ran/oai-gnb-cu-up/templates/configmap.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/templates/configmap.yaml
@@ -28,13 +28,13 @@ data:
 
           tr_s_preference = "f1";
 
-          local_s_if_name = "f1u";
-          local_s_address = "{{ .Values.multus.f1uInterface.IPadd }}";
+          local_s_if_name = "e1";
+          local_s_address = "{{ .Values.multus.e1Interface.IPadd }}";
           remote_s_address = "{{ .Values.config.f1duIpAddress }}";
           local_s_portc   = 501;
-          local_s_portd   = 2152;
+          local_s_portd   = 2153;
           remote_s_portc  = 500;
-          remote_s_portd  = 2152;
+          remote_s_portd  = 2153;
 
           # ------- SCTP definitions
           SCTP :
@@ -55,10 +55,10 @@ data:
 
           NETWORK_INTERFACES :
           {
-              GNB_INTERFACE_NAME_FOR_NG_AMF            = "n3";
-              GNB_IPV4_ADDRESS_FOR_NG_AMF              = "{{ .Values.multus.n3Interface.IPadd }}";
-              GNB_INTERFACE_NAME_FOR_NGU               = "n3";
-              GNB_IPV4_ADDRESS_FOR_NGU                 = "{{ .Values.multus.n3Interface.IPadd }}";
+              GNB_INTERFACE_NAME_FOR_NG_AMF            = "e1";
+              GNB_IPV4_ADDRESS_FOR_NG_AMF              = "{{ .Values.multus.e1Interface.IPadd }}";
+              GNB_INTERFACE_NAME_FOR_NGU               = "e1";
+              GNB_IPV4_ADDRESS_FOR_NGU                 = "{{ .Values.multus.e1Interface.IPadd }}";
               GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
           };
         }
