--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -1,4 +1,4 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
+kubernetesType: Openshift  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
 ## In case of using these charts on Openshift then please use UBI images
 ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
@@ -55,7 +55,7 @@ multus:
 # in templates/configmap.yaml
 # Example config files --> https://gitlab.eurecom.fr/oai/openairinterface5g/-/tree/develop/targets/PROJECTS/GENERIC-NR-5GC/CONF 
 config:
-  mountConfig: false          #If config file is mounted then please edit mount.conf in templates/configmap.yaml properly 
+  mountConfig: true          #If config file is mounted then please edit mount.conf in templates/configmap.yaml properly 
   timeZone: "Europe/Paris"
   useAdditionalOptions: "--sa --rfsim --log_config.global_log_options level,nocolor,time"
   rfSimulator: "server"       #If you are not using in RFsimulator mode then you can leave this empty
@@ -66,8 +66,7 @@ config:
   mnc: "01"    # check the information with AMF, SMF, UPF/SPGWU
   mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
   tac: "1"     # check the information with AMF
-  nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4
-  nssaiSd0: "ffffff"    #values in hexa-decimal format
+  snssaiList: "({ sst = 1, sd = 0xffffff })"
   f1IfName: "f1"                # f1 incase multus.f1Interface.create is true
   f1cuIpAddress: "172.21.16.92"     # replace this value with CU f1 ip-address or CU-CP F1C ip-address if not using multus
   f1duIpAddress: "172.21.16.100"    # 172.21.16.100 if using multus
