--- a/openshift/oai-gnb-build-config.yaml
+++ b/openshift/oai-gnb-build-config.yaml
@@ -36,15 +36,15 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: "oai-gnb:develop"
+      name: "oai-gnb:2023.w19"
   runPolicy: Serial
   strategy:
     type: Docker
   source:
     dockerfile: |
-        FROM image-registry.openshift-image-registry.svc:5000/oai-tutorial/oai-ran-base:develop AS gnb-base
+        FROM image-registry.openshift-image-registry.svc:5000/engage5g/oai-ran-base:2023.w19 AS gnb-base
 
-        FROM image-registry.openshift-image-registry.svc:5000/oai-tutorial/oai-ran-build:develop AS gnb-build
+        FROM image-registry.openshift-image-registry.svc:5000/engage5g/oai-ran-build:2023.w19 AS gnb-build
 
         RUN python3 ./docker/scripts/generateTemplate.py ./docker/scripts/gnb_parameters.yaml && \
             cp /oai-ran/docker/scripts/gnb_entrypoint.sh /oai-ran/docker/scripts/entrypoint.sh
