--- a/charts/oai-5g-core/oai-5g-basic/values.yaml
+++ b/charts/oai-5g-core/oai-5g-basic/values.yaml
@@ -68,7 +68,7 @@ oai-ausf:
     logLevel: "debug"   #allowed info/error/debug
   nodeSelector: {}
 oai-amf:
-  enabled: false
+  enabled: true
   weight: 4
   kubernetesType: Openshift #Openshift/Vanilla Vanilla for Upstream Kubernetes
   nfimage:  # image name either locally present or in a public/private repository
@@ -83,7 +83,7 @@ oai-amf:
     ## If you don't want to add a default route in your pod then replace this field with ""
     defaultGateway: ""
     n2Interface:
-      create: false
+      create: true
       Ipadd: "172.21.6.185"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
@@ -94,7 +94,7 @@ oai-amf:
       routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}]
       hostInterface: "bond0" # Interface of the host machine on which this pod will be scheduled
   config:
-    amfInterfaceNameForNGAP: "eth0" # If oai-amf.multus.n2Interface.create is true then n2 else eth0
+    amfInterfaceNameForNGAP: "n2" # If oai-amf.multus.n2Interface.create is true then n2 else eth0
     amfInterfaceNameForSBI: "eth0"  # Service based interface
     externalAusf: "yes"
     logLevel: "debug"   #allowed info/error/debug
@@ -115,7 +115,7 @@ oai-amf:
     ciphAlgoList: '[ "NEA0" , "NEA1" , "NEA2" ]'
   nodeSelector: {}
 oai-spgwu-tiny:
-  enabled: false
+  enabled: true
   weight: 5
   kubernetesType: Openshift #Openshift/Vanilla Vanilla for Upstream Kubernetes
   nfimage:  # image name either locally present or in a public/private repository
@@ -123,7 +123,6 @@ oai-spgwu-tiny:
     version: v1.5.1                                    ## The branch to be used to pull from dockerhub
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
-  includeTcpDumpContainer: false #only for taking pcaps inside network function pod
   imagePullSecrets:
     - name: "regcred"
   # create an extra interface for N3 incase the gNB is outside the cluster network or there is a need to have dedicated interface for N3
@@ -133,15 +132,16 @@ oai-spgwu-tiny:
     ## If you don't want to add a default route in your pod then replace this field with ""
     defaultGateway: ""
     n3Interface:
-      create: false
-      Ipadd: "172.21.8.195"
+      create: true
+      Ipadd: "192.168.25.3"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "n3"
       ## If you do not have a gateway leave the field empty
       Gateway: ""
       ## If you don't want to add a default route in your pod then replace this field with ""
-      routes: [{'dst': '10.8.0.0/24','gw': '172.21.11.254'}, {'dst': '10.9.0.0/24','gw': '172.21.11.254'}]
+      routes: ""
+      #[{'dst': '10.8.0.0/24','gw': '172.21.11.254'}, {'dst': '10.9.0.0/24','gw': '172.21.11.254'}]
       hostInterface: "bond0"
     ## For n4 it is better to re-use eth0 interface inside the pod (primary CNI of Kubernetes)
     n4Interface:
@@ -168,7 +168,7 @@ oai-spgwu-tiny:
       hostInterface: "bond0"
   #NOTE: If the interface you selected for n6If is wrong then traffic will not be routed towards internet
   config:
-    n3If: "eth0"  # n3 if multus.n3Interface.create is true
+    n3If: "n3"  # n3 if multus.n3Interface.create is true
     n4If: "eth0" # n4 if multus.n4Interface.create is true
     n6If: "eth0"  # n6 multus.n6Interface.create is true
     logLevel: "info"   #allowed info/error/debug
@@ -185,9 +185,13 @@ oai-spgwu-tiny:
     nssaiSd0: "0xFFFFFF"  # should match with SMF information (Optional, if removed sd value will be 0xFFFFFF)
     dnn0: "oai" # should match with SMF information
     #Upto 4 slices can be added from here to add more you need to add manullay in config.yaml. Please follow the same way of adding slices nssaiSST$,nssaiSd$,dnn$ ($=0,1,2,3)
-    nssaiSst1: 1 # should match with SMF information (Optional, if removed slice will not be configured)
+    nssaiSst1: 2 # should match with SMF information (Optional, if removed slice will not be configured)
     nssaiSd1: "0xFFFFFF"  # should match with SMF information (Optional, if removed sd value will be 0xFFFFFF only if nssaiSst1 is configured)
     dnn1: "ims" # should match with SMF information
+  start:
+    tcpdump: true
+  includeTcpDumpContainer: true #only for taking pcaps inside network function pod
+
   nodeSelector: {}
 #oai-traffic-server:
 #  enabled: false
@@ -210,7 +214,7 @@ oai-spgwu-tiny:
 #    upfIpadd: 172.21.6.95
 #    noOfIperf3Server: 10
 oai-smf:
-  enabled: false
+  enabled: true
   weight: 6
   kubernetesType: Openshift #Openshift/Vanilla Vanilla for Upstream Kubernetes
   nfimage:  # image name either locally present or in a public/private repository
@@ -257,7 +261,7 @@ oai-smf:
     dnnNi1: "ims"
     pdusessiontype1: "IPv4v6"
     ipv4dnnRange1: "12.2.1.2 - 12.2.1.254"
-    nssaiSst1: 1
+    nssaiSst1: 2
     nssaiSd1: "0xFFFFFF"
     qosProfile5qi1: 1
     sessionAmbrUl1: "1000Mbps"
