--- a/charts/oai-5g-core/oai-spgwu-tiny/templates/deployment.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/templates/deployment.yaml
@@ -75,7 +75,7 @@ spec:
         command:
           - /bin/sh
           - -c
-          - /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap
+          - 'mkdir -p /tmp/pcap && /usr/sbin/tcpdump -i any -w /tmp/pcap/{{ .Chart.Name }}_`date +%Y-%m-%d_%H_%M-%S-%Z`.pcap'
         {{- else}}
         command:
           - /bin/sleep
