--- a/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
+++ b/charts/oai-5g-core/oai-spgwu-tiny/values.yaml
@@ -36,15 +36,16 @@ multus:
   ## If you don't want to add a default route in your pod then leave this field empty
   defaultGateway: ""
   n3Interface:
-    create: false
-    Ipadd: "172.21.12.95"
+    create: true
+    #Ipadd: "172.21.12.95"
+    Ipadd: "192.168.25.3"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "n3"
     ## If you do not have a gateway leave the field empty
     Gateway: ""
     ## If you do not want to add any routes in your pod then leave this field empty
-    routes: [{'dst': '10.8.0.0/24','gw': '172.21.15.254'}, {'dst': '10.9.0.0/24','gw': '172.21.15.254'}]
+    #routes: [{'dst': '10.8.0.0/24','gw': '172.21.15.254'}, {'dst': '10.9.0.0/24','gw': '172.21.15.254'}]
     hostInterface: "bond0"
   n4Interface:
     create: false
@@ -72,7 +73,7 @@ multus:
 #NOTE: If the interface you selected for n6If is wrong then traffic will not be routed towards internet
 config:
   fqdn: "oai-spgwu-tiny-svc"
-  n3If: "eth0"  # n3 if multus.n3Interface.create is true
+  n3If: "n3"  # n3 if multus.n3Interface.create is true
   n4If: "eth0" # n4 if multus.n4Interface.create is true
   n6If: "eth0"  # n6 multus.n6Interface.create is true  
   threadsN3Ul: "1"      #Multi threading is not properly supported
@@ -92,7 +93,7 @@ config:
   nssaiSd0: "0xFFFFFF"  # should match with SMF information (Optional, if removed sd value will be 0xFFFFFF)
   dnn0: "oai" # should match with SMF information
   #Upto 4 slices can be added from here to add more you need to add manullay in config.yaml. Please follow the same way of adding slices nssaiSST$,nssaiSd$,dnn$ ($=0,1,2,3)
-  nssaiSst1: 1 # should match with SMF information (Optional, if removed slice will not be configured)
+  nssaiSst1: 2 # should match with SMF information (Optional, if removed slice will not be configured)
   nssaiSd1: "0xFFFFFF"  # should match with SMF information (Optional, if removed sd value will be 0xFFFFFF only if nssaiSst1 is configured)
   dnn1: "ims" # should match with SMF information
 
