--- a/charts/oai-5g-ran/oai-gnb-cu-cp/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-cp/values.yaml
@@ -1,16 +1,16 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
+kubernetesType: Openshift  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
 ## In case of using these charts on Openshift then please use UBI images
 ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:   # image name either locally present or in a public/private repository
-  repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb  
+  repository: oai-gnb
   version: 2023.w19 # image tag or develop
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 ## good to use when pulling images from docker-hub mention 
-imagePullSecrets: 
-  - name: "regcred"
+#imagePullSecrets: 
+#  - name: "regcred"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -50,7 +50,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   f1cInterface:
     create: true
-    IPadd: "172.21.16.92"
+    IPadd: "192.168.20.12"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "f1c"
@@ -69,10 +69,10 @@ config:
   mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
   tac: "1"     # check the information with AMF
   snssaiList: "({ sst = 1, sd = 0xffffff })"
-  amfIpAddress: "172.21.6.94"  # amf ip-address
+  amfIpAddress: "172.21.6.185"  # amf ip-address
   e1IpAddress: "192.168.18.13"  ## CU-UP ip-address 
   #Normally you don't have to set this but at the moment it is required
-  f1duIpAddress: "172.21.16.100"
+  f1duIpAddress: "192.168.20.13"
  
 # Debugging section
 podSecurityContext:
@@ -81,9 +81,9 @@ podSecurityContext:
 
 start:
   gnbcucp: true
-  tcpdump: false
+  tcpdump: true
 
-includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+includeTcpDumpContainer: true #If true it will add a tcpdump container inside network function pod for debugging
 
 ## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
