--- a/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-up/values.yaml
@@ -1,16 +1,16 @@
-kubernetesType: Vanilla  #Vanilla for community kubernetes distribution else Openshift for Openshift
+kubernetesType: Openshift  #Vanilla for community kubernetes distribution else Openshift for Openshift
 
 ## In case of using these charts on Openshift then please use UBI images
 ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:   # image name either locally present or in a public/private repository
-  repository: docker.io/oaisoftwarealliance/oai-nr-cuup           ## dockerhub oaisoftwarealliance/oai-gnb  
+  repository: oai-cu-up 
   version: 2023.w19 # image tag or develop
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 ## good to use when pulling images from docker-hub mention 
-imagePullSecrets: 
-  - name: "regcred"
+#imagePullSecrets: 
+ # - name: "regcred"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -39,7 +39,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   n3Interface:
     create: true
-    IPadd: "172.21.8.97"
+    IPadd: "192.168.25.4"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "n3"
@@ -49,7 +49,7 @@ multus:
     hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
   f1uInterface:
     create: true
-    IPadd: "172.21.16.93"
+    IPadd: "192.168.20.14"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "f1u"
@@ -69,9 +69,9 @@ config:
   tac: "1"     # check the information with AMF
   nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4 
   nssaiSd: "0xffffff"    #values in hexa-decimal format
-  e1IpAddress: 192.168.18.12
+  e1IpAddress: "192.168.18.12"
   ## Its the DU which communicates with the CU so no need for DU ip-address
-  f1duIpAddress: "172.21.16.100"
+  f1duIpAddress: "192.168.20.13"
 
 ## Debugging section
 podSecurityContext:
@@ -80,9 +80,9 @@ podSecurityContext:
 
 start:
   gnbcuup: true #If false the network function container will run in sleep mode for manually testing
-  tcpdump: false
+  tcpdump: true
 
-includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+includeTcpDumpContainer: true #If true it will add a tcpdump container inside network function pod for debugging
 
 ## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
