--- a/charts/oai-5g-ran/oai-gnb-du/templates/configmap.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/templates/configmap.yaml
@@ -187,12 +187,12 @@ data:
           tr_s_preference  = "local_L1";
           tr_n_preference  = "f1";
           local_n_if_name = "f1";
-          local_n_address = "172.21.6.100";
-          remote_n_address = "172.21.6.92";
+          local_n_address = "192.168.20.13";
+          remote_n_address = "192.168.20.12";
           local_n_portc   = 500;
-          local_n_portd   = 2153;
+          local_n_portd   = 2152;
           remote_n_portc  = 501;
-          remote_n_portd  = 2153;
+          remote_n_portd  = 2152;
           pusch_TargetSNRx10          = 200;
           pucch_TargetSNRx10          = 200;
           ulsch_max_frame_inactivity = 1;
@@ -244,14 +244,14 @@ data:
 
            log_config :
            {
-             global_log_level                      ="info";
+             global_log_level                      ="debug";
              hw_log_level                          ="info";
              phy_log_level                         ="info";
              mac_log_level                         ="info";
              rlc_log_level                         ="info";
              pdcp_log_level                        ="info";
              rrc_log_level                         ="info";
-             f1ap_log_level                         ="info";
+             f1ap_log_level                         ="debug";
              ngap_log_level                         ="debug";
           };
 {{- end }}
