--- a/charts/oai-5g-ran/oai-gnb-du/values.yaml
+++ b/charts/oai-5g-ran/oai-gnb-du/values.yaml
@@ -3,14 +3,14 @@ kubernetesType: Openshift  #Vanilla for community kubernetes distribution else O
 ## In case of using these charts on Openshift then please use UBI images
 ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
 nfimage:   # image name either locally present or in a public/private repository
-  repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb
+  repository: oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb
   version: 2023.w19 # image tag or develop
   # pullPolicy: IfNotPresent or Never or Always
   pullPolicy: IfNotPresent
 
 ## good to use when pulling images from docker-hub mention
-imagePullSecrets:
-  - name: "regcred"
+#imagePullSecrets:
+ # - name: "regcred"
 
 serviceAccount:
   # Specifies whether a service account should be created
@@ -31,7 +31,7 @@ multus:
   defaultGateway: ""
   f1Interface:
     create: true
-    IPadd: "172.21.16.100"
+    IPadd: "192.168.20.13"
     Netmask: "22"
     # #name inside the pod is hardcoded right now
     # name: "f1"
@@ -66,10 +66,12 @@ config:
   mnc: "01"    # check the information with AMF, SMF, UPF/SPGWU
   mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
   tac: "1"     # check the information with AMF
+  nssaiSst: "1"  #currently only 4 standard values are allowed 1,2,3,4
+  nssaiSd0: "ffffff"    #values in hexa-decimal format
   snssaiList: "({ sst = 1, sd = 0xffffff })"
   f1IfName: "f1"                # f1 incase multus.f1Interface.create is true
-  f1cuIpAddress: "172.21.16.92"     # replace this value with CU f1 ip-address or CU-CP F1C ip-address if not using multus
-  f1duIpAddress: "172.21.16.100"    # 172.21.16.100 if using multus
+  f1cuIpAddress: "192.168.20.12"    # replace this value with CU f1 ip-address or CU-CP F1C ip-address if not using multus
+  f1duIpAddress: "192.168.20.13"    # 172.21.16.100 if using multus
   f1cuPort: "2152"
   f1duPort: "2152"
   #Not mandatory (leave it as it is)
@@ -87,9 +89,9 @@ podSecurityContext:
 
 start:
   gnbdu: true #If false the network function container will run in sleep mode for manually testing
-  tcpdump: false
+  tcpdump: true
 
-includeTcpDumpContainer: false #If true it will add a tcpdump container inside network function pod for debugging
+includeTcpDumpContainer: true #If true it will add a tcpdump container inside network function pod for debugging
 
 ## For openshift you can use rhel8/support-tools:8.7-13
 tcpdumpimage:
