--- a/charts/oai-5g-ran/oran-local/values.yaml
+++ b/charts/oai-5g-ran/oran-local/values.yaml
@@ -3,7 +3,7 @@ oai-gnb-cu-cp:
   weight: 0
   kubernetesType: Openshift #Openshift/Vanilla Vanilla for Upstream Kubernetes
   nfimage:   # image name either locally present or in a public/private repository
-    repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb  
+    repository: image-registry.openshift-image-registry.svc:5000/engage5g/oai-gnb
     version: 2023.w19 # image tag or develop
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
@@ -18,7 +18,7 @@ oai-gnb-cu-cp:
     defaultGateway: ""
     e1Interface:
       create: true
-      IPadd: "172.21.6.195"
+      IPadd: "192.168.18.12"
       Netmask: "24"
       # #name inside the pod is hardcoded right now
       # name: "e1"
@@ -27,8 +27,8 @@ oai-gnb-cu-cp:
       #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
       hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
     n2Interface:
-      create: false
-      IPadd: "172.21.6.195"
+      create: true
+      IPadd: "172.21.6.98"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "n2"
@@ -37,8 +37,8 @@ oai-gnb-cu-cp:
       #routes: 
       hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
     f1cInterface:
-      create: false
-      IPadd: "172.21.6.195"
+      create: true
+      IPadd: "192.168.20.12"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "f1c"
@@ -55,11 +55,11 @@ oai-gnb-cu-cp:
     mnc: "01"    # check the information with AMF, SMF, UPF/SPGWU
     mncLength: "2" # check the information with AMF, SMF, UPF/SPGWU
     tac: "1"     # check the information with AMF
-    snssaiList: "({ sst = 1, sd = 0xffffff }, { sst = 2, sd = 0xffffff })"
-    amfIpAddress: "172.21.6.185"  # amf ip-address
-    e1IpAddress: "172.21.6.194"  ## CU-UP ip-address 
+    snssaiList: "({ sst = 1, sd = 0xffffff })"
+    amfIpAddress: "172.21.6.94"  # amf ip-address
+    e1IpAddress: "192.168.18.13"  ## CU-UP ip-address 
     #Normally you don't have to set this but at the moment it is required
-    f1duIpAddress: "172.21.6.193"
+    f1duIpAddress: "192.168.20.13"
 
   nodeSelector: {}
 
@@ -71,7 +71,7 @@ oai-gnb-cu-up:
   ## In case of using these charts on Openshift then please use UBI images
   ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
   nfimage:   # image name either locally present or in a public/private repository
-    repository: docker.io/oaisoftwarealliance/oai-nr-cuup           ## dockerhub oaisoftwarealliance/oai-gnb  
+    repository: image-registry.openshift-image-registry.svc:5000/engage5g/oai-cu-up  ## dockerhub oaisoftwarealliance/oai-gnb  
     version: 2023.w19 # image tag or develop
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
@@ -87,7 +87,7 @@ oai-gnb-cu-up:
     defaultGateway: ""
     e1Interface:
       create: true
-      IPadd: "172.21.6.194"
+      IPadd: "192.168.18.13"
       Netmask: "24"
       # #name inside the pod is hardcoded right now
       # name: "e1"
@@ -96,8 +96,8 @@ oai-gnb-cu-up:
       #routes: [{'dst': '10.8.0.0/24','gw': '172.21.7.254'}, {'dst': '10.9.0.0/24','gw': '172.21.7.254'}]
       hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
     n3Interface:
-      create: false
-      IPadd: "172.21.6.194"
+      create: true
+      IPadd: "192.168.25.4"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "n3"
@@ -106,8 +106,8 @@ oai-gnb-cu-up:
       #routes: []
       hostInterface: "bond0"      # Interface of the host machine on which this pod will be scheduled
     f1uInterface:
-      create: false
-      IPadd: "172.21.6.194"
+      create: true
+      IPadd: "192.168.20.14"
       Netmask: "22"
       # #name inside the pod is hardcoded right now
       # name: "f1u"
@@ -129,7 +129,7 @@ oai-gnb-cu-up:
     nssaiSd: "0xffffff"    #values in hexa-decimal format
     e1IpAddress: "172.21.6.195"
     ## Its the DU which communicates with the CU so no need for DU ip-address
-    f1duIpAddress: "172.21.6.193"
+    f1duIpAddress: "192.168.20.13"
 
   start:
     gnbcuup: true #If false the network function container will run in sleep mode for manually testing
@@ -144,7 +144,7 @@ oai-gnb-du:
   ## In case of using these charts on Openshift then please use UBI images
   ## To know more about them follow this tutorial https://gitlab.eurecom.fr/oai/cn5g/oai-cn5g-fed/-/tree/master/openshift
   nfimage:   # image name either locally present or in a public/private repository
-    repository: docker.io/oaisoftwarealliance/oai-gnb           ## dockerhub oaisoftwarealliance/oai-gnb
+    repository: image-registry.openshift-image-registry.svc:5000/engage5g/oai-gnb ## dockerhub oaisoftwarealliance/oai-gnb
     version: 2023.w19 # image tag or develop
     # pullPolicy: IfNotPresent or Never or Always
     pullPolicy: IfNotPresent
