--- a/charts/oai-5g-ran/oai-gnb/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb/templates/deployment.yaml
@@ -123,7 +123,7 @@ spec:
         args:
          -  sed s/@GNB_IP_ADDRESS@/$GNB_IP_ADDRESS/g /opt/oai-gnb/etc/gnb.conf | tee /tmp/gnb.conf;
             /opt/oai-gnb/bin/uhd_images_downloader.py -t b2xx; 
-            /opt/oai-gnb/bin/nr-softmodem -O /tmp/gnb.conf $USE_ADDITIONAL_OPTIONS;
+            /opt/oai-gnb/bin/nr-softmodem -O /tmp/gnb.conf {{ .Values.config.useAdditionalOptions }};
         {{- end}}
         {{- else}}
         command:
