--- a/openshift/oai-gnb-build-config.yaml
+++ b/openshift/oai-gnb-build-config.yaml
@@ -36,18 +36,17 @@ spec:
   output:
     to:
       kind: ImageStreamTag
-      name: "oai-gnb:2023.w19"
+      name: "oai-gnb:2023.w45"
   runPolicy: Serial
   strategy:
     type: Docker
   source:
     dockerfile: |
-        FROM image-registry.openshift-image-registry.svc:5000/engage5g/oai-ran-base:2023.w19 AS gnb-base
+        FROM image-registry.openshift-image-registry.svc:5000/engage5g/oai-ran-base:2023.w45 AS gnb-base
 
-        FROM image-registry.openshift-image-registry.svc:5000/engage5g/oai-ran-build:2023.w19 AS gnb-build
+        FROM image-registry.openshift-image-registry.svc:5000/engage5g/oai-ran-build:2023.w45 AS gnb-build
 
-        RUN python3 ./docker/scripts/generateTemplate.py ./docker/scripts/gnb_parameters.yaml && \
-            cp /oai-ran/docker/scripts/gnb_entrypoint.sh /oai-ran/docker/scripts/entrypoint.sh
+        RUN cp /oai-ran/docker/scripts/gnb_entrypoint.sh /oai-ran/docker/scripts/entrypoint.sh
 
         #start from scratch for target executable
         FROM registry.access.redhat.com/ubi8/ubi:latest as oai-gnb
@@ -94,25 +93,25 @@ spec:
             /usr/local/lib/
 
         COPY --from=gnb-base \
-            /lib64/libconfig.so.9 \
+            /lib64/libconfig.so.11 \
             /lib64/libforms.so.2 \
             /lib64/libblas.so.3 \
             /lib64/liblapack.so.3 \
             /lib64/liblapacke.so.3 \
-            /lib64/libboost_chrono.so.1.66.0 \
-            /lib64/libboost_date_time.so.1.66.0 \
-            /lib64/libboost_filesystem.so.1.66.0 \
-            /lib64/libboost_program_options.so.1.66.0 \
-            /lib64/libboost_serialization.so.1.66.0 \
-            /lib64/libboost_thread.so.1.66.0 \
-            /lib64/libboost_system.so.1.66.0 \
-            /lib64/libboost_unit_test_framework.so.1.66.0 \
-            /lib64/libboost_atomic.so.1.66.0 \
-            /lib64/libboost_timer.so.1.66.0 \
-            /lib64/libboost_regex.so.1.66.0 \
-            /lib64/libicudata.so.60 \
-            /lib64/libicui18n.so.60 \
-            /lib64/libicuuc.so.60 \
+            /lib64/libboost_chrono.so.1.75.0 \
+            /lib64/libboost_date_time.so.1.75.0 \
+            /lib64/libboost_filesystem.so.1.75.0 \
+            /lib64/libboost_program_options.so.1.75.0 \
+            /lib64/libboost_serialization.so.1.75.0 \
+            /lib64/libboost_thread.so.1.75.0 \
+            /lib64/libboost_system.so.1.75.0 \
+            /lib64/libboost_unit_test_framework.so.1.75.0 \
+            /lib64/libboost_atomic.so.1.75.0 \
+            /lib64/libboost_timer.so.1.75.0 \
+            /lib64/libboost_regex.so.1.75.0 \
+            /lib64/libicudata.so.67 \
+            /lib64/libicui18n.so.67 \
+            /lib64/libicuuc.so.67 \
             /lib64/
 
         # Now we are copying from builder-image the UHD files.
@@ -125,10 +124,6 @@ spec:
 
         RUN /bin/bash -c "ln -s /usr/local/lib/liboai_usrpdevif.so /usr/local/lib/liboai_device.so" && \
             ldconfig
-
-        # Copy the relevant configuration files for gNB
-        WORKDIR /opt/oai-gnb/etc
-        COPY --from=gnb-build /oai-ran/docker/etc .
 
         WORKDIR /opt/oai-gnb
         #EXPOSE 2152/udp  # S1U, GTP/UDP
