--- a/charts/oai-5g-ran/oai-gnb-cu-cp/templates/deployment.yaml
+++ b/charts/oai-5g-ran/oai-gnb-cu-cp/templates/deployment.yaml
@@ -51,9 +51,9 @@ spec:
       - name: gnbcucp
         image: "{{ .Values.nfimage.repository }}:{{ .Values.nfimage.version }}"
         volumeMounts:
-          - mountPath: /opt/oai-gnb/etc/mounted.conf
+          - mountPath: /opt/oai-gnb/etc/gnb.conf
             name: configuration
-            subPath: mounted.conf
+            subPath: gnb.conf
         {{- if .Values.resources.define}}
         resources:
           requests:
